# sparse-linear-solvers

./: CMakeLists.txt  README.md  config.h.in  main.c
include/: config.h  sparse_linear_solver.h  sparse_structs.h
matrix/: symmetric.mtx
src/: sparse_linear_solver.c  sparse_structs.c
